# can-utils-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
demo/: run-demo.sh  setup-and-dump.tape
src/: lib.rs  main.rs
src/dump/: format.rs  live.rs  mod.rs
src/setup/: exec.rs  mod.rs  models.rs  plan.rs  prereqs.rs  prompt.rs
