[package]
name = "can-utils-rs"
version = "0.1.0"
edition = "2024"
authors = ["Willem Roovers <willemroovers@protonmail.com>"]
license = "MIT"
description = "A pure Rust CLI utility for managing and manipulating CAN interfaces and CAN data."
homepage = "https://github.com/wallem89/can-utils-rs"
repository = "https://github.com/wallem89/can-utils-rs"
readme = "README.md"
keywords = ["automotive", "can-utils", "socketcan", "linux", "ecu"]
categories = [
    "network-programming",
    "os::linux-apis",
    "hardware-support",
    "automotive",
]

[dependencies]
anyhow = "1.0.102"
inquire = "0.9.4"
